specify version ranges of dependencies

--- a/v1.0.0/docs/01-getting-started.mdx
+++ b/v1.0.0/docs/01-getting-started.mdx
@@ -19,9 +19,9 @@ First, we install Edtr.io and its peer dependencies:
 
 ```bash
 # Using yarn
-yarn add @edtr-io/core react react-dom react-dnd react-dnd-html5-backend styled-components
+yarn add @edtr-io/core@^1.0.0 react@^16.8.0 react-dom@^16.8.0 react-is@^16.8.0 react-dnd@^11.0.0 react-dnd-html5-backend@^11.0.0 redux@^4.0.0 styled-components@^5.0.0
 # OR Using npm
-npm i --save @edtr-io/core react react-dom react-dnd react-dnd-html5-backend styled-components
+npm i --save @edtr-io/core@^1.0.0 react@^16.8.0 react-dom@^16.8.0 react-is@^16.8.0 react-dnd@^11.0.0 react-dnd-html5-backend@^11.0.0 redux@^4.0.0 styled-components@^5.0.0
 ```
 
 Furthermore, we need at least one plugin. There are some "official" plugins provided by Edtr.io (though none of these are required). Let's start
@@ -29,9 +29,9 @@ with the text plugin:
 
 ```bash
 # Using yarn
-yarn add @edtr-io/plugin-text
+yarn add @edtr-io/plugin-text@^1.0.0 @fortawesome/fontawesome-svg-core@^1.0.0 @fortawesome/free-solid-svg-icons@^5.0.0 @fortawesome/react-fontawesome@^0.1.0 immutable@^4.0.0-0
 # OR Using npm
-npm i --save @edtr-io/plugin-text
+npm i --save @edtr-io/plugin-text@^1.0.0 @fortawesome/fontawesome-svg-core@^1.0.0 @fortawesome/free-solid-svg-icons@^5.0.0 @fortawesome/react-fontawesome@^0.1.0 immutable@^4.0.0-0
 ```
 
 ## <a name="creating-the-editor" /> Creating the editor
@@ -94,9 +94,9 @@ First, we install the rows plugin
 
 ```bash
 # Using yarn
-yarn add @edtr-io/plugin-rows
+yarn add @edtr-io/plugin-rows@^1.0.0
 # OR using npm
-npm i --save @edtr-io/plugin-rows
+npm i --save @edtr-io/plugin-rows@^1.0.0
 ```
 
 and add it to our editor:
