--- a/v1.1.0/docs/03-architecture.mdx
+++ b/v1.1.0/docs/03-architecture.mdx
@@ -42,9 +42,8 @@ other Edtr.io plugin (e.g. provide global undo/redo history).
 
 You can customize nearly every aspect of Edtr.io if necessary, e.g.
 
-- `@edtr-io/plugin-rows` is an Edtr.io plugin that provides the Drag'n'Drop behavior. You can replace that with your own Edtr.io plugin if you want a different behavior.
-
-- The Edtr.io Editor component allows you to pass your own custom `DocumentEditor`. With this, you can replace
+- @edtr-io/plugin-rows is an Edtr.io plugin that provides the Drag'n'Drop behavior. You can replace that with your own Edtr.io plugin if you want a different behavior.
+- The Edtr.io Editor component allows you to pass your own custom DocumentEditor. With this, you can replace
   the default UI we provide (e.g. by moving the toolbar somewhere else).
 
 ## <a name="principle5" /> The document format should be easy to work with.
