--- a/v1.1.0/docs/01-why.mdx
+++ b/v1.1.0/docs/01-why.mdx
@@ -1,22 +1,26 @@
 # Why?
 
-Edtr.io was born from the needs of the learning platform [serlo.org](https://serlo.org/)
-and with all the experience we gathered from creating educational resources by a diverse group of authors.
+Edtr.io was born from the needs of the learning platform
+[serlo.org](https://serlo.org/) and with all the experience we gathered from
+creating educational resources by a diverse group of authors.
 
-We tried out a lot of other editing libraries before we settled on creating our own
-(like [Slate](https://www.slatejs.org/) or [Draft.js](https://draftjs.org/)).
-However we noticed that the rich text part is only a small (albeit very important) foundation of what we need.
+We tried out a lot of other editing libraries before we settled on creating our
+own (like [Slate](https://www.slatejs.org/) or
+[Draft.js](https://draftjs.org/)). However we noticed that the rich text part is
+only a small (albeit very important) foundation of what we need.
 
-When creating interactive learning resources, we need more functionality than a rich text library can offer.
-Take for example multiple choice exercises and interactive learning games: Providing a great editing experience
-for these often requires us to have a tight control over the user experience.
-Trying to achieve that with a rich text library like Slate was hard:
+When creating interactive learning resources, we need more functionality than a
+rich text library can offer. Take for example multiple choice exercises and
+interactive learning games: Providing a great editing experience for these often
+requires us to have a tight control over the user experience. Trying to achieve
+that with a rich text library like Slate was hard:
 
-- Since Slate plugins are build around rich text editing, you often have to deal with rather low-level
-  details like text selection.
-- For Slate to do its magic, you also have to adhere to a couple of assumptions. Depending on what
-  you want to render, you might break something (e.g. your plugin loses it's focus).
+- Since Slate plugins are build around rich text editing, you often have to deal
+  with rather low-level details like text selection.
+- For Slate to do its magic, you also have to adhere to a couple of assumptions.
+  Depending on what you want to render, you might break something (e.g. your
+  plugin loses it's focus).
 
 These reasons lead us to build with Edtr.io an abstraction layer on top of that:
-A composable plugin system representing a tree of content elements where rich text is only contained
-in the leaf nodes.
+A composable plugin system representing a tree of content elements where rich
+text is only contained in the leaf nodes.
