--- a/v1.1.0/docs/01-why.mdx
+++ b/v1.1.0/docs/01-why.mdx
@@ -19,7 +19,7 @@ that with a rich text library like Slate was hard:
   with rather low-level details like text selection.
 - For Slate to do its magic, you also have to adhere to a couple of assumptions.
   Depending on what you want to render, you might break something (e.g. your
-  plugin loses it's focus).
+  plugin loses its focus).
 
 These reasons lead us to build with Edtr.io an abstraction layer on top of that:
 A composable plugin system representing a tree of content elements where rich
