Add suggestions from code review

--- a/v1.1.0/docs/01-why.mdx
+++ b/v1.1.0/docs/01-why.mdx
@@ -9,11 +9,16 @@ own (like [Slate](https://www.slatejs.org/) or
 [Draft.js](https://draftjs.org/)). However we noticed that the rich text part is
 only a small (albeit very important) foundation of what we need.
 
-When creating interactive learning resources, we need more functionality than a
-rich text library can offer. Take for example multiple choice exercises and
-interactive learning games: Providing a great editing experience for these often
-requires us to have a tight control over the user experience. Trying to achieve
-that with a rich text library like Slate was hard:
+When creating interactive learning resources, we need a better suited
+abstraction for editing than the one a rich text library can offer. It's like
+the comparision between Assembly and a high level programming language: With
+Edtr.io you will have a better productivity since you do not need to deal with
+the low level details.
+
+Take for example multiple choice exercises and interactive learning games:
+Providing a great editing experience for these often requires us to have a tight
+control over the user experience. Trying to achieve that with a rich text
+library like Slate is hard, because:
 
 - Since Slate plugins are build around rich text editing, you often have to deal
   with rather low-level details like text selection.
@@ -21,6 +26,6 @@ that with a rich text library like Slate was hard:
   Depending on what you want to render, you might break something (e.g. your
   plugin loses its focus).
 
-These reasons lead us to build with Edtr.io an abstraction layer on top of that:
-A composable plugin system representing a tree of content elements where rich
-text is only contained in the leaf nodes.
+These reasons lead us to build Edtr.io which is an abstraction layer on top of
+that: A composable plugin system representing a tree of content elements where
+rich text is only contained in the leaf nodes.
