Apply suggestions from code review
Co-authored-by: Jonas Keinholz <git@inyono.dev>

--- a/v1.1.0/docs/01-why.mdx
+++ b/v1.1.0/docs/01-why.mdx
@@ -9,14 +9,14 @@ own (like [Slate](https://www.slatejs.org/) or
 [Draft.js](https://draftjs.org/)). However we noticed that the rich text part is
 only a small (albeit very important) foundation of what we need.
 
-When creating interactive learning resources, we need a better suited
-abstraction for editing than the one a rich text library can offer. It's like
-the comparision between Assembly and a high level programming language: With
-Edtr.io you will have a better productivity since you do not need to deal with
-the low level details.
+When creating interactive learning resources, we need a better abstraction
+for developing editing experiences that are not primarily dealing with rich text.
+It's similar to comparing Assembly with a high-level programming language: With
+Edtr.io you will have increased productivity since you do not have to deal with
+low-level details in most cases.
 
 Take for example multiple choice exercises and interactive learning games:
-Providing a great editing experience for these often requires us to have a tight
+Providing a great editing experience for such use cases often requires us to have a tight
 control over the user experience. Trying to achieve that with a rich text
 library like Slate is hard, because:
 
@@ -26,6 +26,6 @@ library like Slate is hard, because:
   Depending on what you want to render, you might break something (e.g. your
   plugin loses its focus).
 
-These reasons lead us to build Edtr.io which is an abstraction layer on top of
+These reasons lead us to build Edtr.io as an abstraction layer on top of
 that: A composable plugin system representing a tree of content elements where
 rich text is only contained in the leaf nodes.
