--- a/v1.1.0/docs/01-why.mdx
+++ b/v1.1.0/docs/01-why.mdx
@@ -9,16 +9,16 @@ own (like [Slate](https://www.slatejs.org/) or
 [Draft.js](https://draftjs.org/)). However we noticed that the rich text part is
 only a small (albeit very important) foundation of what we need.
 
-When creating interactive learning resources, we need a better abstraction
-for developing editing experiences that are not primarily dealing with rich text.
+When creating interactive learning resources, we need a better abstraction for
+developing editing experiences that are not primarily dealing with rich text.
 It's similar to comparing Assembly with a high-level programming language: With
 Edtr.io you will have increased productivity since you do not have to deal with
 low-level details in most cases.
 
 Take for example multiple choice exercises and interactive learning games:
-Providing a great editing experience for such use cases often requires us to have a tight
-control over the user experience. Trying to achieve that with a rich text
-library like Slate is hard, because:
+Providing a great editing experience for such use cases often requires us to
+have a tight control over the user experience. Trying to achieve that with a
+rich text library like Slate is hard, because:
 
 - Since Slate plugins are build around rich text editing, you often have to deal
   with rather low-level details like text selection.
@@ -26,6 +26,6 @@ library like Slate is hard, because:
   Depending on what you want to render, you might break something (e.g. your
   plugin loses its focus).
 
-These reasons lead us to build Edtr.io as an abstraction layer on top of
-that: A composable plugin system representing a tree of content elements where
-rich text is only contained in the leaf nodes.
+These reasons lead us to build Edtr.io as an abstraction layer on top of that: A
+composable plugin system representing a tree of content elements where rich text
+is only contained in the leaf nodes.
