--- a/v1.0.0/docs/01-getting-started.mdx
+++ b/v1.0.0/docs/01-getting-started.mdx
@@ -419,5 +419,5 @@ function CardEditor({ editable, state }) {
 - Look at the [official core
   plugins](https://github.com/edtr-io/edtr-io/tree/main/packages/plugins). You
   can check their source code to see how things work.
-- Check the [available state types](/api/plugin).
-- Explore the [API Reference](/api).
+- Check the [available state types](/api-reference/plugin).
+- Explore the [API Reference](/api-reference).
